# pybticino

./: .gitignore  .pre-commit-config.yaml  README.md  call_incoming.xml  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  docs.yml  publish-test.yml  publish-to-pypi.yml  pythonpackage.yml  release.yml
docs/: changelog.md  getting-started.md  index.md  requirements.txt  reverse-engineering-notes.md  webrtc-audio.md  webrtc-signaling.md  websocket-events.md
docs/api/: account.md  auth.md  exceptions.md  models.md  signaling.md  websocket.md
examples/: test_script.py  unlock_door.py  webrtc_answer_mode.py  webrtc_audio_test.html  webrtc_offer_mode.py  websocket_test.py
pybticino/examples/: test_script.py  unlock_door.py  websocket_test.py
pybticino/src/pybticino/: __init__.py  account.py  auth.py  const.py  exceptions.py  home.py  models.py  module.py  websocket.py
src/pybticino/: __init__.py  account.py  auth.py  const.py  exceptions.py  models.py  signaling.py  websocket.py
tests/: __init__.py  conftest.py  test_account.py  test_auth.py  test_models.py  test_signaling.py  test_websocket.py
