[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pybticino"
description = "Simple API to access BTicino/Legrand Classe 100X/300X devices"
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "k-the-hidden-hero", email = "git@k8s.one" }]
maintainers = [{ name = "k-the-hidden-hero", email = "git@k8s.one" }]
requires-python = ">=3.13"
dependencies = [
    "websockets>=14.0",
    "aiohttp>=3.11.16",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "aioresponses",
]
dev = [
    "ruff",
    "bandit",
    "mypy",
    "types-requests",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/k-the-hidden-hero/pybticino"
Documentation = "https://k-the-hidden-hero.github.io/pybticino/"
Repository = "https://github.com/k-the-hidden-hero/pybticino.git"
Issues = "https://github.com/k-the-hidden-hero/pybticino/issues"
Changelog = "https://github.com/k-the-hidden-hero/pybticino/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["examples", "docs", ".tox", "test_env"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "G",      # flake8-logging-format
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific
    "S",      # flake8-bandit
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (formatter handles it)
    "S105",   # hardcoded password (false positives on const names)
    "S106",   # hardcoded password
    "ASYNC109",  # timeout parameter in async function (used intentionally for aiohttp)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "ANN"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = ["pybticino"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105"]
